Multiple clocks in different timezones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <div>
-    <app-clock [width]="400" [height]="400"></app-clock>
+    <app-clock size="400" timeZoneId="America/Los_Angeles"></app-clock>
+    <app-clock size="400" timeZoneId="Atlantic/Reykjavik"></app-clock>
+    <app-clock size="400" timeZoneId="Europe/Warsaw"></app-clock>
+    <app-clock size="400" timeZoneId="Europe/Helsinki"></app-clock>
+    <app-clock size="400" timeZoneId="Asia/Calcutta"></app-clock>
+    <app-clock size="400" timeZoneId="Asia/Tokyo"></app-clock>
 </div>
