--- a/src/app/clock/clock.component.html
+++ b/src/app/clock/clock.component.html
@@ -1,1 +1,4 @@
-<canvas #clockCanvas id="clockCanvas" [width]="width" [height]="height"></canvas>
+<div id="clock">
+  <h4>{{timeZoneId}}</h4>
+  <canvas #clockCanvas [width]="size" [height]="size"></canvas>
+</div>
