--- a/src/app/clock/clock.component.css
+++ b/src/app/clock/clock.component.css
@@ -1,3 +1,5 @@
-#clockCanvas {
+#clock {
+    display: inline-block;
     border: 0.5px solid gray;
+    font-family: Arial, Helvetica, sans-serif;
 }
