Display current date

--- a/src/app/clock/clock.component.html
+++ b/src/app/clock/clock.component.html
@@ -1,4 +1,5 @@
 <div id="clock">
   <h4>{{timeZoneId}}</h4>
+  <h5>{{currentDate}}</h5>
   <canvas #clockCanvas [width]="size" [height]="size"></canvas>
 </div>
