Add Bootstrap4 CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div>
-    <app-clock size="400" timeZoneId="America/Los_Angeles"></app-clock>
-    <app-clock size="400" timeZoneId="Atlantic/Reykjavik"></app-clock>
-    <app-clock size="400" timeZoneId="Europe/Warsaw"></app-clock>
-    <app-clock size="400" timeZoneId="Europe/Helsinki"></app-clock>
-    <app-clock size="400" timeZoneId="Asia/Calcutta"></app-clock>
-    <app-clock size="400" timeZoneId="Asia/Tokyo"></app-clock>
+<div class="container">
+  <div class="card-deck mb-3 text-center">
+    <app-clock size="300" timeZoneId="America/Los_Angeles"></app-clock>
+    <app-clock size="300" timeZoneId="Atlantic/Reykjavik"></app-clock>
+    <app-clock size="300" timeZoneId="Europe/Warsaw"></app-clock>
+    <app-clock size="300" timeZoneId="Europe/Helsinki"></app-clock>
+    <app-clock size="300" timeZoneId="Asia/Calcutta"></app-clock>
+    <app-clock size="300" timeZoneId="Asia/Tokyo"></app-clock>
+  </div>
 </div>
