--- a/src/app/clock/clock.component.html
+++ b/src/app/clock/clock.component.html
@@ -2,7 +2,7 @@
   <div class="card-header bg-primary text-white">
     <div *ngIf="editMode">
       <input type="text" class="bg-primary text-white only-bottom-border" [(ngModel)]="editedTimeZoneId"
-        (keyup.enter)="changeTimeZone()" (keyup.esc)="cancel()">
+        [ngbTypeahead]="search" (keyup.enter)="changeTimeZone()" (keyup.esc)="cancel()">
       <a class="text-white extra-padding" href="#" (click)="changeTimeZone()">
         <fa-icon [icon]="okIcon"></fa-icon>
       </a>
