Adjust card margins

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card-deck mb-3 text-center">
+  <div class="card-deck text-center">
     <app-clock size="300" timeZoneId="America/Los_Angeles"></app-clock>
     <app-clock size="300" timeZoneId="Atlantic/Reykjavik"></app-clock>
     <app-clock size="300" timeZoneId="Europe/Warsaw"></app-clock>
