--- a/src/app/clock/clock.component.css
+++ b/src/app/clock/clock.component.css
@@ -1,3 +1,11 @@
+.alert {
+    position: fixed;
+    top: 5px;
+    right: 10px;
+    text-align: center;
+    z-index: 999;
+}
+
 .extra-padding { 
     padding-left: 10px; 
 }
